--- a/.github/workflows/debut.yml
+++ b/.github/workflows/debut.yml
@@ -13,55 +13,39 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # -------------------------------------
-      # 1️⃣ Checkout du repo
-      # -------------------------------------
+      # 1️⃣ Récupération du repository
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # -------------------------------------
       # 2️⃣ Installation de Node.js
-      # -------------------------------------
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 18
 
-      # -------------------------------------
       # 3️⃣ Installation des dépendances
-      # -------------------------------------
       - name: Install dependencies
         run: |
           npm ci
           npx playwright install --with-deps
 
-      # -------------------------------------
-      # 4️⃣ Installation de Allure
-      # -------------------------------------
+      # 4️⃣ Installation automatique de Allure (méthode officielle)
       - name: Install Allure
-        run: |
-          sudo apt update
-          sudo apt install -y allure
+        uses: andrcuns/setup-allure@v1
 
-      # -------------------------------------
-      # 5️⃣ Exécution des tests Playwright avec le tag fourni
-      # -------------------------------------
-      - name: Run tagged Playwright tests
+      # 5️⃣ Lancer les tests par tag
+      - name: Run Playwright tagged tests
         run: |
-          echo "▶️ Exécution des tests avec le tag '${{ github.event.inputs.tag }}'"
+          echo "▶️ Running tests with tag: ${{ github.event.inputs.tag }}"
           npx playwright test --grep "${{ github.event.inputs.tag }}"
 
-      # -------------------------------------
       # 6️⃣ Génération du rapport Allure
-      # -------------------------------------
       - name: Generate Allure report
         if: always()
         run: |
           allure generate playwright-report --clean -o allure-report
 
-      # -------------------------------------
-      # 7️⃣ Upload des rapports en artefacts
-      # -------------------------------------
+      # 7️⃣ Upload artefacts Allure + Playwright
       - name: Upload Allure report
         if: always()
         uses: actions/upload-artifact@v4
@@ -75,4 +59,3 @@ jobs:
         with:
           name: playwright-report
           path: playwright-report
-
