--- a/.github/workflows/debut.yml
+++ b/.github/workflows/debut.yml
@@ -13,48 +13,38 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      # 2. Setup Node
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 18
 
-      # 3. Install dependencies + browsers
-      - name: Install dependencies
+      - name: Install dependencies + Playwright browsers
         run: |
           npm ci
           npx playwright install --with-deps
 
-      # 4. Run Playwright tests with tag
       - name: Run tagged Playwright tests
         run: |
           echo "▶️ Tests avec le tag '${{ github.event.inputs.tag }}'"
           npx playwright test --grep "${{ github.event.inputs.tag }}"
 
-      # 5. Generate Allure report
-      - name: Generate Allure Report
-        uses: simple-elf/allure-report-action@v1
-        if: always()
-        with:
-          allure_results: allure-results
-          allure_report: allure-report
-          keep_reports: 5
+      - name: Install Allure CLI
+        run: npm install -g allure-commandline --save-dev
 
-      # 6. Upload Allure report
+      - name: Generate Allure Report
+        run: |
+          allure generate allure-results --clean -o allure-report
+
       - name: Upload Allure Report
-        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: allure-report
           path: allure-report
 
-      # 7. Upload Playwright report
       - name: Upload Playwright report
-        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: playwright-report
